0.6.10/_sources/gettingstarted/examples/gallery/auto_examples_core/c_importer/plot_read_IR_from_omnic.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gettingstarted/examples/gallery/auto_examples_core/c_importer/plot_read_IR_from_omnic.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gettingstarted_examples_gallery_auto_examples_core_c_importer_plot_read_IR_from_omnic.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_core_c_importer_plot_read_IR_from_omnic.py:


Loading an IR (omnic SPG) experimental file
============================================

Here we load an experimental SPG file (OMNIC) and plot it.

.. GENERATED FROM PYTHON SOURCE LINES 17-19

.. code-block:: default

    import spectrochempy as scp








.. GENERATED FROM PYTHON SOURCE LINES 20-21

Loading and stacked plot of the original

.. GENERATED FROM PYTHON SOURCE LINES 21-28

.. code-block:: default


    datadir = scp.preferences.datadir

    dataset = scp.read_omnic(datadir / "irdata" / "nh4y-activation.spg")

    _ = dataset.plot_stack(style="paper")




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_IR_from_omnic_001.png
   :alt: plot read IR from omnic
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_IR_from_omnic_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 29-30

change the unit of y-axis, the y origin as well as the title of the axis

.. GENERATED FROM PYTHON SOURCE LINES 30-37

.. code-block:: default


    dataset.y.to("hour")
    dataset.y -= dataset.y[0]
    dataset.y.title = "acquisition time"

    _ = dataset.plot_stack()




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_IR_from_omnic_002.png
   :alt: plot read IR from omnic
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_IR_from_omnic_002.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 38-40

This ends the example ! The following line can be uncommented if no plot shows when
running the .py script with python

.. GENERATED FROM PYTHON SOURCE LINES 40-42

.. code-block:: default


    # scp.show()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.650 seconds)


.. _sphx_glr_download_gettingstarted_examples_gallery_auto_examples_core_c_importer_plot_read_IR_from_omnic.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_read_IR_from_omnic.py <plot_read_IR_from_omnic.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_read_IR_from_omnic.ipynb <plot_read_IR_from_omnic.ipynb>`
